# lilotane

./: .gitignore  CMakeLists.txt  IPASIR.md  README.md  build.sh  create_tests.sh  get_failed_reason.py  makefile  picosat  run_and_verify.sh  runwatch  test.sh
instances/Elevator/: domain.hddl  p01.hddl  p02.hddl  p03.hddl  p04.hddl  p05.hddl  p06.hddl  p07.hddl  p08.hddl  p09.hddl  p10.hddl  p11.hddl  p12.hddl  p13.hddl  p14.hddl  p15.hddl  p16.hddl  p17.hddl  p18.hddl  p19.hddl  p20.hddl
instances/HikingG/: p01.hddl  p02.hddl  p03.hddl  p04.hddl  p05.hddl  p06.hddl  p07.hddl  p08.hddl  p09.hddl  p10.hddl  p11.hddl  p12.hddl  p13.hddl  p14.hddl  p15.hddl  p16.hddl  p17.hddl  p18.hddl  p19.hddl  p20.hddl
instances/RoverG/: domain.hddl  p01.hddl  p02.hddl  p03.hddl  p04.hddl  p05.hddl  p06.hddl  p07.hddl  p08.hddl  p09.hddl  p10.hddl  p11.hddl  p12.hddl  p13.hddl  p14.hddl  p15.hddl  p16.hddl  p17.hddl  p18.hddl  p19.hddl  p20.hddl
instances/SatelliteG/: domain.hddl  p01.hddl  p02.hddl  p03.hddl  p04.hddl  p05.hddl  p06.hddl  p07.hddl  p08.hddl  p09.hddl  p10.hddl  p11.hddl  p12.hddl  p13.hddl  p14.hddl  p15.hddl  p16.hddl  p17.hddl  p18.hddl  p19.hddl  p20.hddl
instances/TransportG/: domain.hddl  pfile01.hddl  pfile02.hddl  pfile03.hddl  pfile04.hddl  pfile05.hddl  pfile06.hddl  pfile07.hddl  pfile08.hddl  pfile09.hddl  pfile10.hddl  pfile11.hddl  pfile12.hddl  pfile13.hddl  pfile14.hddl  pfile15.hddl  pfile16.hddl  pfile17.hddl  pfile18.hddl  pfile19.hddl  pfile20.hddl  pfile21.hddl  pfile22.hddl  pfile23.hddl  pfile24.hddl  pfile25.hddl  pfile26.hddl  pfile27.hddl  pfile28.hddl  pfile29.hddl  pfile30.hddl
instances/Zenotravel/: domain.hddl  p01.hddl  p02.hddl  p03.hddl  p04.hddl  p05.hddl  p06.hddl  p07.hddl  p08.hddl  p09.hddl  p10.hddl  p11.hddl  p12.hddl  p13.hddl  p14.hddl  p15.hddl  p16.hddl  p17.hddl  p18.hddl  p19.hddl  p20.hddl
instances/barman/: domain.hddl  p01.hddl  p02.hddl  p03.hddl  p04.hddl  p05.hddl  p06.hddl  p07.hddl  p08.hddl  p09.hddl  p10.hddl  p11.hddl  p12.hddl  p13.hddl  p14.hddl  p15.hddl  p16.hddl  p17.hddl  p18.hddl  p19.hddl  p20.hddl
instances/blocksworld/: domain.hddl  p01.hddl  p02.hddl  p03.hddl  p04.hddl  p05.hddl  p06.hddl  p07.hddl  p08.hddl  p09.hddl  p10.hddl  p11.hddl  p12.hddl  p13.hddl  p14.hddl  p15.hddl  p16.hddl  p17.hddl  p18.hddl  p19.hddl  p20.hddl
instances/childsnack/: domain.hddl  p01.hddl  p02.hddl  p03.hddl  p04.hddl  p05.hddl  p06.hddl  p07.hddl  p08.hddl  p09.hddl  p10.hddl  p11.hddl  p12.hddl  p13.hddl  p14.hddl  p15.hddl  p16.hddl  p17.hddl  p18.hddl  p19.hddl  p20.hddl
instances/depots/: domain.hddl  p01.hddl  p02.hddl  p03.hddl  p04.hddl  p05.hddl  p06.hddl  p07.hddl  p08.hddl  p09.hddl  p10.hddl  p11.hddl  p12.hddl  p13.hddl  p14.hddl  p15.hddl  p16.hddl  p17.hddl  p18.hddl  p19.hddl  p20.hddl
instances/entertainment/: domain.hddl  p01-split-with-adapter.hddl  p03-split-and-rejoin.hddl  p04-tv-dvd-gc.hddl  p05-tv-dvd-gc-box.hddl  p06-use-twice.hddl  p07-use-twice-box.hddl  p08-use-twice-amp.hddl  p10-tv-ds1-two-dev.hddl  p11-tv-ds1-one-dev-and-speaker.hddl  p12-tv-ds1-two-dev-and-speaker.hddl
instances/factories/: domain.hddl  p01.hddl  p02.hddl  p03.hddl  p04.hddl  p05.hddl  p06.hddl  p07.hddl  p08.hddl  p09.hddl  p10.hddl  p11.hddl  p12.hddl  p14.hddl  p15.hddl  p16.hddl  p17.hddl  p18.hddl  p19.hddl
instances/gripper/: domain.hddl  p01.hddl  p02.hddl  p03.hddl  p04.hddl  p05.hddl  p06.hddl  p07.hddl  p08.hddl  p09.hddl  p10.hddl  p11.hddl  p12.hddl  p13.hddl  p14.hddl  p15.hddl  p16.hddl  p17.hddl  p18.hddl  p19.hddl  p20.hddl
instances/hiking/: domain.hddl  p01.hddl  p02.hddl  p03.hddl  p04.hddl  p05.hddl  p06.hddl  p07.hddl  p08.hddl  p09.hddl  p10.hddl  p11.hddl  p12.hddl  p13.hddl  p14.hddl  p15.hddl  p16.hddl  p17.hddl  p18.hddl  p19.hddl  p20.hddl
instances/ipc-entertainment-2/: pfile02.hddl
instances/ipc-entertainment-3/: dfile03.hddl  pfile03.hddl
instances/ipc-entertainment-4/: dfile04.hddl  pfile04.hddl
instances/ipc-freecell/: p01.hddl  p02.hddl
instances/ipc-logistics/: domain.hddl
instances/ipc-minecraft-house/: p01.hddl
instances/ipc-minecraft-player/: domain.hddl  p01.hddl  p02.hddl
instances/ipc-rover/: p20.hddl
instances/ipc2020-feature-test-forall/: domain.hddl
instances/miconic/: domain.hddl
instances/minecraft/: domain.hddl  p-5-5-5-10.hddl  p-5-5-5-11.hddl  p-5-5-5-12.hddl  p-5-5-5-6.hddl  p-5-5-5-7.hddl  p-5-5-5-8.hddl  p-5-5-5-9.hddl  p-house-p-3-3-3-3.hddl  p-house-p-3-4-3-4.hddl  p-house-p-3-4-4-4.hddl  p-house-p-4-4-4-4.hddl  p-house-p-4-5-4-5.hddl  p-house-p-4-5-5-5.hddl  p-house-p-5-5-5-5.hddl  p-house-p-5-6-5-6.hddl  p-house-p-5-6-6-6.hddl  p-house-p-6-6-6-6.hddl  p-house-p-6-7-6-7.hddl  p-house-p-6-7-7-7.hddl  p-house-p-7-7-7-7.hddl  p-house-p-7-8-7-8.hddl  p-house-p-7-8-8-8.hddl  p-house-p-8-8-8-8.hddl  p-house-p-8-9-8-9.hddl  p-house-p-8-9-9-9.hddl  p-house-p-9-9-9-9.hddl
instances/rover/: p01.hddl  p_test.hddl  pfile04.hddl
instances/smartphone/: domain.hddl
instances/test/: domain.hddl  p01.hddl
instances/transport/: domain.hddl  pfile0.hddl  pfile01.hddl
instances/umtranslog/: p16-A-RegularTruck-4Locations.hddl
instances/woodworking/: domain.hddl
instances/zenotravel/: domain.hddl
lib/cadical/: LIBS  fetch_and_build.sh  makefile
lib/cryptominisat/: LIBS  fetch_and_build.sh
lib/dummyfuncs/: dummyfuncs.cpp  ipasir.h
lib/glucose4/: Solver.cc.patch  Solver.h.patch  fetch_and_build.sh  ipasirglucoseglue.cc
lib/glucosesyrup4.1/: fetch_and_build.sh  ipasirglucoseglue.cc  makefile
lib/lingeling/: fetch_and_build.sh  ipasir.h  ipasirlingelingglue.cpp  makefile
lib/mallob/: LIBS
lib/riss/: LIBS  fetch_and_build.sh
scripts/: plot_clausedistribution.py  plot_planlengthburndown.py
src/: fetch_and_build_parser.sh  libpanda.hpp  main.cpp  panda_makefile
src/algo/: arg_iterator.cpp  arg_iterator.h  domination_resolver.cpp  domination_resolver.h  fact_analysis.cpp  fact_analysis.h  indirect_fact_support.h  instantiator.cpp  instantiator.h  minres.h  network_traversal.cpp  network_traversal.h  (+10 more)
(+119 files in other folders)
